--- a/index.html
+++ b/index.html
@@ -2483,7 +2483,7 @@
 <h4 id="x5-1-6-description-of-functionalities"><bdi class="secno">5.1.6</bdi> 機能の記述<a class="self-link" aria-label="§" href="#sec-requirements-description-of-functionalities"></a></h4>
 
 <ul>
-  <li>WoTアーキテクチャでは、<a href="#sec-requirements-thing-functionalities" class="sec-ref">§&nbsp;<bdi class="secno">5.1.2</bdi>モノの機能</a>で示しているモノの機能を記述できるべきです。</li>
+  <li>WoTアーキテクチャでは、<a href="#sec-requirements-thing-functionalities" class="sec-ref">§&nbsp;<bdi class="secno">5.1.2</bdi>モノの機能</a>で示しているモノの機能を記述できるべきである。</li>
 </ul>
 
 </section>
